// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`infoTable > should work with default props 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <dl
      class="styles__h6pvpm1"
    >
      <div
        class="styles__h6pvpm2 uv_x6hyh50"
        style="--uv_3mg8xe0: repeat(3, 1fr); --uv_3mg8xe1: repeat(3, 1fr); --uv_3mg8xe2: repeat(3, 1fr); --uv_3mg8xe3: repeat(3, 1fr); --uv_3mg8xe4: repeat(3, 1fr); --uv_3mg8xe5: repeat(3, 1fr); --h6pvpm0: 100%;"
      >
        <div
          class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
          style="--uv_4k0ekn0: 100%; --uv_4k0ekn2: 0;"
        >
          <dt
            class="styles__h6pvpm3"
          >
            <div
              class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owl uv_m4c9owo uv_m4c9ow1b uv_m4c9ow23 uv_m4c9ow3f"
            >
              title
            </div>
          </dt>
          <dd
            class="styles__h6pvpm4"
          >
            <div
              class="styles__h6pvpm5 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow7 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            >
              cell
            </div>
          </dd>
        </div>
        <div
          class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
          style="--uv_4k0ekn0: 100%; --uv_4k0ekn2: 0;"
        >
          <dt
            class="styles__h6pvpm3"
          >
            <div
              class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owl uv_m4c9owo uv_m4c9ow1b uv_m4c9ow23 uv_m4c9ow3f"
            >
              title
            </div>
          </dt>
          <dd
            class="styles__h6pvpm4"
          >
            <div
              class="styles__h6pvpm5 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow7 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            >
              cell
            </div>
          </dd>
        </div>
        <div
          class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
          style="--uv_4k0ekn0: 100%; --uv_4k0ekn2: 0;"
        >
          <dt
            class="styles__h6pvpm3"
          >
            <div
              class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owl uv_m4c9owo uv_m4c9ow1b uv_m4c9ow23 uv_m4c9ow3f"
            >
              title
            </div>
          </dt>
          <dd
            class="styles__h6pvpm4"
          >
            <div
              class="styles__h6pvpm5 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow7 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            >
              cell
            </div>
          </dd>
        </div>
      </div>
      <div
        class="styles__h6pvpm2 uv_x6hyh50"
        style="--uv_3mg8xe0: 2fr 1fr; --uv_3mg8xe1: 2fr 1fr; --uv_3mg8xe2: 2fr 1fr; --uv_3mg8xe3: 2fr 1fr; --uv_3mg8xe4: 2fr 1fr; --uv_3mg8xe5: 2fr 1fr; --h6pvpm0: 100%;"
      >
        <div
          class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
          style="--uv_4k0ekn0: 100%; --uv_4k0ekn2: 0;"
        >
          <dt
            class="styles__h6pvpm3"
          >
            <div
              class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owl uv_m4c9owo uv_m4c9ow1b uv_m4c9ow23 uv_m4c9ow3f"
            >
              title
            </div>
          </dt>
          <dd
            class="styles__h6pvpm4"
          >
            <div
              class="styles__h6pvpm5 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow7 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            >
              cell with more text
            </div>
          </dd>
        </div>
        <div
          class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
          style="--uv_4k0ekn0: 100%; --uv_4k0ekn2: 0;"
        >
          <dt
            class="styles__h6pvpm3"
          >
            <div
              class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owl uv_m4c9owo uv_m4c9ow1b uv_m4c9ow23 uv_m4c9ow3f"
            >
              title
            </div>
          </dt>
          <dd
            class="styles__h6pvpm4"
          >
            <div
              class="styles__h6pvpm5 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow7 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            >
              cell
            </div>
          </dd>
        </div>
      </div>
      <div
        class="styles__h6pvpm2 uv_x6hyh50"
        style="--uv_3mg8xe0: 1fr; --uv_3mg8xe1: 1fr; --uv_3mg8xe2: 1fr; --uv_3mg8xe3: 1fr; --uv_3mg8xe4: 1fr; --uv_3mg8xe5: 1fr; --h6pvpm0: 100%;"
      >
        <div
          class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
          style="--uv_4k0ekn0: 100%; --uv_4k0ekn2: 0;"
        >
          <dt
            class="styles__h6pvpm3"
          >
            <div
              class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owl uv_m4c9owo uv_m4c9ow1b uv_m4c9ow23 uv_m4c9ow3f"
            >
              title
            </div>
          </dt>
          <dd
            class="styles__h6pvpm4"
          >
            <div
              class="styles__h6pvpm5 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow7 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            >
              cell
            </div>
          </dd>
        </div>
      </div>
      <div
        class="styles__h6pvpm2 uv_x6hyh50"
        style="--uv_3mg8xe0: repeat(3, 1fr); --uv_3mg8xe1: repeat(3, 1fr); --uv_3mg8xe2: repeat(3, 1fr); --uv_3mg8xe3: repeat(3, 1fr); --uv_3mg8xe4: repeat(3, 1fr); --uv_3mg8xe5: repeat(3, 1fr); --h6pvpm0: 100%;"
      >
        <div
          class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
          style="--uv_4k0ekn0: 100%; --uv_4k0ekn2: 0;"
        >
          <dt
            class="styles__h6pvpm3"
          >
            <div
              class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owl uv_m4c9owo uv_m4c9ow1b uv_m4c9ow23 uv_m4c9ow3f"
            >
              title
            </div>
          </dt>
          <dd
            class="styles__h6pvpm4"
          >
            <div
              class="styles__h6pvpm5 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow7 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            >
              cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell
            </div>
          </dd>
        </div>
        <div
          class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
          style="--uv_4k0ekn0: 100%; --uv_4k0ekn2: 0;"
        >
          <dt
            class="styles__h6pvpm3"
          >
            <div
              class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owl uv_m4c9owo uv_m4c9ow1b uv_m4c9ow23 uv_m4c9ow3f"
            >
              title
            </div>
          </dt>
          <dd
            class="styles__h6pvpm4"
          >
            <div
              class="styles__h6pvpm5 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow7 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            >
              cell
            </div>
          </dd>
        </div>
        <div
          class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
          style="--uv_4k0ekn0: 100%; --uv_4k0ekn2: 0;"
        >
          <dt
            class="styles__h6pvpm3"
          >
            <div
              class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owl uv_m4c9owo uv_m4c9ow1b uv_m4c9ow23 uv_m4c9ow3f"
            >
              title
            </div>
          </dt>
          <dd
            class="styles__h6pvpm4"
          >
            <div
              class="styles__h6pvpm5 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow7 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            >
              cell
            </div>
          </dd>
        </div>
      </div>
    </dl>
  </div>
</DocumentFragment>
`;

exports[`infoTable > should work with multiLine 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <dl
      class="styles__h6pvpm1"
    >
      <div
        class="styles__h6pvpm2 uv_x6hyh50"
        style="--uv_3mg8xe0: repeat(3, 1fr); --uv_3mg8xe1: repeat(3, 1fr); --uv_3mg8xe2: repeat(3, 1fr); --uv_3mg8xe3: repeat(3, 1fr); --uv_3mg8xe4: repeat(3, 1fr); --uv_3mg8xe5: repeat(3, 1fr); --h6pvpm0: 100%;"
      >
        <div
          class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
          style="--uv_4k0ekn0: 100%; --uv_4k0ekn2: 0;"
        >
          <dt
            class="styles__h6pvpm3"
          >
            <div
              class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owl uv_m4c9owo uv_m4c9ow1b uv_m4c9ow23 uv_m4c9ow3f"
            >
              title
            </div>
          </dt>
          <dd
            class="styles__h6pvpm4"
          >
            <div
              class="styles__h6pvpm5 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow7 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            >
              cell
            </div>
          </dd>
        </div>
        <div
          class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
          style="--uv_4k0ekn0: 100%; --uv_4k0ekn2: 0;"
        >
          <dt
            class="styles__h6pvpm3"
          >
            <div
              class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owl uv_m4c9owo uv_m4c9ow1b uv_m4c9ow23 uv_m4c9ow3f"
            >
              title
            </div>
          </dt>
          <dd
            class="styles__h6pvpm4"
          >
            <div
              class="styles__h6pvpm5 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow7 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            >
              cell
            </div>
          </dd>
        </div>
        <div
          class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
          style="--uv_4k0ekn0: 100%; --uv_4k0ekn2: 0;"
        >
          <dt
            class="styles__h6pvpm3"
          >
            <div
              class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owl uv_m4c9owo uv_m4c9ow1b uv_m4c9ow23 uv_m4c9ow3f"
            >
              title
            </div>
          </dt>
          <dd
            class="styles__h6pvpm4"
          >
            <div
              class="styles__h6pvpm5 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow7 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            >
              cell
            </div>
          </dd>
        </div>
      </div>
      <div
        class="styles__h6pvpm2 uv_x6hyh50"
        style="--uv_3mg8xe0: 2fr 1fr; --uv_3mg8xe1: 2fr 1fr; --uv_3mg8xe2: 2fr 1fr; --uv_3mg8xe3: 2fr 1fr; --uv_3mg8xe4: 2fr 1fr; --uv_3mg8xe5: 2fr 1fr; --h6pvpm0: 100%;"
      >
        <div
          class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
          style="--uv_4k0ekn0: 100%; --uv_4k0ekn2: 0;"
        >
          <dt
            class="styles__h6pvpm3"
          >
            <div
              class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owl uv_m4c9owo uv_m4c9ow1b uv_m4c9ow23 uv_m4c9ow3f"
            >
              title
            </div>
          </dt>
          <dd
            class="styles__h6pvpm4"
          >
            <div
              class="styles__h6pvpm5 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow7 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            >
              cell with more text
            </div>
          </dd>
        </div>
        <div
          class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
          style="--uv_4k0ekn0: 100%; --uv_4k0ekn2: 0;"
        >
          <dt
            class="styles__h6pvpm3"
          >
            <div
              class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owl uv_m4c9owo uv_m4c9ow1b uv_m4c9ow23 uv_m4c9ow3f"
            >
              title
            </div>
          </dt>
          <dd
            class="styles__h6pvpm4"
          >
            <div
              class="styles__h6pvpm5 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow7 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            >
              cell
            </div>
          </dd>
        </div>
      </div>
      <div
        class="styles__h6pvpm2 uv_x6hyh50"
        style="--uv_3mg8xe0: 1fr; --uv_3mg8xe1: 1fr; --uv_3mg8xe2: 1fr; --uv_3mg8xe3: 1fr; --uv_3mg8xe4: 1fr; --uv_3mg8xe5: 1fr; --h6pvpm0: 100%;"
      >
        <div
          class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
          style="--uv_4k0ekn0: 100%; --uv_4k0ekn2: 0;"
        >
          <dt
            class="styles__h6pvpm3"
          >
            <div
              class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owl uv_m4c9owo uv_m4c9ow1b uv_m4c9ow23 uv_m4c9ow3f"
            >
              title
            </div>
          </dt>
          <dd
            class="styles__h6pvpm4"
          >
            <div
              class="styles__h6pvpm5 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow7 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            >
              cell
            </div>
          </dd>
        </div>
      </div>
      <div
        class="styles__h6pvpm2 uv_x6hyh50"
        style="--uv_3mg8xe0: repeat(3, 1fr); --uv_3mg8xe1: repeat(3, 1fr); --uv_3mg8xe2: repeat(3, 1fr); --uv_3mg8xe3: repeat(3, 1fr); --uv_3mg8xe4: repeat(3, 1fr); --uv_3mg8xe5: repeat(3, 1fr); --h6pvpm0: 100%;"
      >
        <div
          class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
          style="--uv_4k0ekn0: 100%; --uv_4k0ekn2: 0;"
        >
          <dt
            class="styles__h6pvpm3"
          >
            <div
              class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owl uv_m4c9owo uv_m4c9ow1b uv_m4c9ow23 uv_m4c9ow3f"
            >
              title
            </div>
          </dt>
          <dd
            class="styles__h6pvpm4"
          >
            <div
              class="styles__h6pvpm5 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            >
              cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell
            </div>
          </dd>
        </div>
        <div
          class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
          style="--uv_4k0ekn0: 100%; --uv_4k0ekn2: 0;"
        >
          <dt
            class="styles__h6pvpm3"
          >
            <div
              class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owl uv_m4c9owo uv_m4c9ow1b uv_m4c9ow23 uv_m4c9ow3f"
            >
              title
            </div>
          </dt>
          <dd
            class="styles__h6pvpm4"
          >
            <div
              class="styles__h6pvpm5 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow7 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            >
              cell
            </div>
          </dd>
        </div>
        <div
          class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
          style="--uv_4k0ekn0: 100%; --uv_4k0ekn2: 0;"
        >
          <dt
            class="styles__h6pvpm3"
          >
            <div
              class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owl uv_m4c9owo uv_m4c9ow1b uv_m4c9ow23 uv_m4c9ow3f"
            >
              title
            </div>
          </dt>
          <dd
            class="styles__h6pvpm4"
          >
            <div
              class="styles__h6pvpm5 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow7 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            >
              cell
            </div>
          </dd>
        </div>
      </div>
    </dl>
  </div>
</DocumentFragment>
`;

exports[`infoTable > should work with width 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <dl
      class="styles__h6pvpm1"
    >
      <div
        class="styles__h6pvpm2 uv_x6hyh50"
        style="--uv_3mg8xe0: repeat(3, 1fr); --uv_3mg8xe1: repeat(3, 1fr); --uv_3mg8xe2: repeat(3, 1fr); --uv_3mg8xe3: repeat(3, 1fr); --uv_3mg8xe4: repeat(3, 1fr); --uv_3mg8xe5: repeat(3, 1fr); --h6pvpm0: 30%;"
      >
        <div
          class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
          style="--uv_4k0ekn0: 100%; --uv_4k0ekn2: 0;"
        >
          <dt
            class="styles__h6pvpm3"
          >
            <div
              class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owl uv_m4c9owo uv_m4c9ow1b uv_m4c9ow23 uv_m4c9ow3f"
            >
              title
            </div>
          </dt>
          <dd
            class="styles__h6pvpm4"
          >
            <div
              class="styles__h6pvpm5 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow7 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            >
              cell
            </div>
          </dd>
        </div>
        <div
          class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
          style="--uv_4k0ekn0: 100%; --uv_4k0ekn2: 0;"
        >
          <dt
            class="styles__h6pvpm3"
          >
            <div
              class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owl uv_m4c9owo uv_m4c9ow1b uv_m4c9ow23 uv_m4c9ow3f"
            >
              title
            </div>
          </dt>
          <dd
            class="styles__h6pvpm4"
          >
            <div
              class="styles__h6pvpm5 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow7 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            >
              cell
            </div>
          </dd>
        </div>
        <div
          class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
          style="--uv_4k0ekn0: 100%; --uv_4k0ekn2: 0;"
        >
          <dt
            class="styles__h6pvpm3"
          >
            <div
              class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owl uv_m4c9owo uv_m4c9ow1b uv_m4c9ow23 uv_m4c9ow3f"
            >
              title
            </div>
          </dt>
          <dd
            class="styles__h6pvpm4"
          >
            <div
              class="styles__h6pvpm5 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow7 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            >
              cell
            </div>
          </dd>
        </div>
      </div>
      <div
        class="styles__h6pvpm2 uv_x6hyh50"
        style="--uv_3mg8xe0: 2fr 1fr; --uv_3mg8xe1: 2fr 1fr; --uv_3mg8xe2: 2fr 1fr; --uv_3mg8xe3: 2fr 1fr; --uv_3mg8xe4: 2fr 1fr; --uv_3mg8xe5: 2fr 1fr; --h6pvpm0: 30%;"
      >
        <div
          class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
          style="--uv_4k0ekn0: 100%; --uv_4k0ekn2: 0;"
        >
          <dt
            class="styles__h6pvpm3"
          >
            <div
              class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owl uv_m4c9owo uv_m4c9ow1b uv_m4c9ow23 uv_m4c9ow3f"
            >
              title
            </div>
          </dt>
          <dd
            class="styles__h6pvpm4"
          >
            <div
              class="styles__h6pvpm5 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow7 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            >
              cell with more text
            </div>
          </dd>
        </div>
        <div
          class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
          style="--uv_4k0ekn0: 100%; --uv_4k0ekn2: 0;"
        >
          <dt
            class="styles__h6pvpm3"
          >
            <div
              class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owl uv_m4c9owo uv_m4c9ow1b uv_m4c9ow23 uv_m4c9ow3f"
            >
              title
            </div>
          </dt>
          <dd
            class="styles__h6pvpm4"
          >
            <div
              class="styles__h6pvpm5 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow7 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            >
              cell
            </div>
          </dd>
        </div>
      </div>
      <div
        class="styles__h6pvpm2 uv_x6hyh50"
        style="--uv_3mg8xe0: 1fr; --uv_3mg8xe1: 1fr; --uv_3mg8xe2: 1fr; --uv_3mg8xe3: 1fr; --uv_3mg8xe4: 1fr; --uv_3mg8xe5: 1fr; --h6pvpm0: 30%;"
      >
        <div
          class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
          style="--uv_4k0ekn0: 100%; --uv_4k0ekn2: 0;"
        >
          <dt
            class="styles__h6pvpm3"
          >
            <div
              class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owl uv_m4c9owo uv_m4c9ow1b uv_m4c9ow23 uv_m4c9ow3f"
            >
              title
            </div>
          </dt>
          <dd
            class="styles__h6pvpm4"
          >
            <div
              class="styles__h6pvpm5 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow7 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            >
              cell
            </div>
          </dd>
        </div>
      </div>
      <div
        class="styles__h6pvpm2 uv_x6hyh50"
        style="--uv_3mg8xe0: repeat(3, 1fr); --uv_3mg8xe1: repeat(3, 1fr); --uv_3mg8xe2: repeat(3, 1fr); --uv_3mg8xe3: repeat(3, 1fr); --uv_3mg8xe4: repeat(3, 1fr); --uv_3mg8xe5: repeat(3, 1fr); --h6pvpm0: 30%;"
      >
        <div
          class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
          style="--uv_4k0ekn0: 100%; --uv_4k0ekn2: 0;"
        >
          <dt
            class="styles__h6pvpm3"
          >
            <div
              class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owl uv_m4c9owo uv_m4c9ow1b uv_m4c9ow23 uv_m4c9ow3f"
            >
              title
            </div>
          </dt>
          <dd
            class="styles__h6pvpm4"
          >
            <div
              class="styles__h6pvpm5 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow7 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            >
              cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell
            </div>
          </dd>
        </div>
        <div
          class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
          style="--uv_4k0ekn0: 100%; --uv_4k0ekn2: 0;"
        >
          <dt
            class="styles__h6pvpm3"
          >
            <div
              class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owl uv_m4c9owo uv_m4c9ow1b uv_m4c9ow23 uv_m4c9ow3f"
            >
              title
            </div>
          </dt>
          <dd
            class="styles__h6pvpm4"
          >
            <div
              class="styles__h6pvpm5 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow7 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            >
              cell
            </div>
          </dd>
        </div>
        <div
          class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
          style="--uv_4k0ekn0: 100%; --uv_4k0ekn2: 0;"
        >
          <dt
            class="styles__h6pvpm3"
          >
            <div
              class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owl uv_m4c9owo uv_m4c9ow1b uv_m4c9ow23 uv_m4c9ow3f"
            >
              title
            </div>
          </dt>
          <dd
            class="styles__h6pvpm4"
          >
            <div
              class="styles__h6pvpm5 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow7 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            >
              cell
            </div>
          </dd>
        </div>
      </div>
    </dl>
  </div>
</DocumentFragment>
`;
